cmake_minimum_required(VERSION 3.5)
project(LearnCPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(LearnCPP main.cpp)

add_subdirectory(Day1)
add_subdirectory(Day2)
add_subdirectory(Day3)
add_subdirectory(Day4)
add_subdirectory(Day5)
add_subdirectory(Day7)
add_subdirectory(Day8)
add_subdirectory(Day10)
add_subdirectory(Day11)
add_subdirectory(Day12)
add_subdirectory(Day16)
add_subdirectory(Day17)
add_subdirectory(Day19)
add_subdirectory(Day20)